<resources>
    <string name="app_name">ImoocTao3</string>
    <string name="image_load_fail">image load fail</string>
    <string name="_5">跳过 5</string>
    <string name="image">图片</string>
    <string name="scan">扫一扫</string>
    <string name="search_hint">目的地/景点/酒店/门票</string>
    <string name="message">消息</string>
    <string name="menu_icon">menu_icon</string>
    <string name="Air_tickets">飞机票</string>
    <string name="index">首页</string>
    <string name="find">发现</string>
    <string name="me">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="advertise_img">广告图片</string>
    <string name="click_to_login">点击登录</string>
    <string name="coupons">优惠卷</string>
    <string name="discount_card">折扣卡</string>
    <string name="btn_shopping_cart">购物车</string>
    <string name="item_img">item_img</string>
    <string name="my_order">我的订单</string>
</resources>