<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0075BF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/rounded_button"
            android:text="@string/click_to_login"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn_login">
            <Button
                android:id="@+id/btn_coupons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/coupons"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn_discount_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/discount_card"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn_shopping_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/btn_shopping_cart"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/me_recycle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>