<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_main_bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_main_bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_nav_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_bottom_menu_style"
            android:onClick="onClick"
            android:textColor="@drawable/nav_button_text_state"
            android:text="@string/index" />

        <Button
            android:id="@+id/btn_nav_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_bottom_menu_style"
            android:onClick="onClick"
            android:textColor="@drawable/nav_button_text_state"
            android:text="@string/find" />

        <Button
            android:id="@+id/btn_nav_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_bottom_menu_style"
            android:onClick="onClick"
            android:textColor="@drawable/nav_button_text_state"
            android:text="@string/me" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>