<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_main_banner"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">
    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/linear_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/vp_main_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vp_main_banner"
        app:layout_constraintVertical_bias="0.90999997" />

    <LinearLayout
        android:id="@+id/linear_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_main_scan"
            android:text="@string/scan"
            android:textColor="#fff"
            android:textSize="16sp"
            android:background="@color/transparent"/>

        <SearchView
            android:id="@+id/edt_search"
            style="@style/search_hint_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:closeIcon="@drawable/ic_close"
            android:focusable="false"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint"
            android:searchIcon="@drawable/ic_main_search"
            android:showDividers="none" />

        <Button
            android:id="@+id/btn_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_main_msg"
            android:text="@string/message"
            android:textColor="#fff"
            android:textSize="16sp"
            android:background="@color/transparent"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_main_banner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_advertise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>